test/scc_test/decl/semantic-errors/039.a
039.t:1:1: error: invalid use of 'restrict'